--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="keywords" content="Profia, portfolio generator, free portfolio, IPS academy, Aayush Vishnoi, Just_Another_3D_Object, Just_A_3D_Object, A 3D Object">
+    <meta name="keywords" content="Profia, portfolio generator, free portfolio, IPS academy, Abhinav Tomar, abhinav-tomar-251, Abhinav, abhinav-tomar-93144622a">
     <meta
       name="description"
       content="Profia: A portfolio generating website."
